<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CarProfileForm" >

    <Spinner
        android:id="@+id/profile_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="55dp" />
    
    <Spinner
        android:id="@+id/profile_make"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/profile_year"
        android:layout_below="@+id/profile_year"
        android:layout_marginTop="21dp" />
 
    <EditText
        android:id="@+id/profile_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/profile_make"
        android:layout_below="@+id/profile_make"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:hint="@string/enter_model"
        android:inputType="textCapWords" />
    

    <EditText
        android:id="@+id/profile_mpg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/profile_model"
        android:layout_below="@+id/profile_model"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/enter_mpg"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/form_profile_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:text="@string/form_profile_submit" />

</RelativeLayout>