<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECF0F1"
    tools:context=".Login" >

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true" />
    <!--
        android:text="@string/dummy_content"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold"
    -->


    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" >

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent" >

            <Button
                android:id="@+id/dummy_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dummy_button" />
        </LinearLayout>

        <com.facebook.widget.LoginButton
            android:id="@+id/login_button"
                        android:paddingRight="10dp"
            
            android:layout_width="260dp"
            android:layout_height="54dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="40dp"
            android:paddingBottom="15dp"
            android:paddingTop="15dp" />

        <TextView
            android:id="@+id/logo"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginBottom="120dp"
            android:ems="10"
            android:text="@string/logo"
            android:textColor="#E74C3C"
            android:textSize="70sp" />

        <Button
            android:id="@+id/logout"
            android:layout_width="260dp"
            android:layout_height="54dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="85dp"
            android:background="#1ABC9C"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingTop="0dp"
            android:text="@string/login_with_email"
            android:textColor="#FFFFFF"
            android:textSize="16.0sp" />
    </FrameLayout>

</FrameLayout>